sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:10: error: value -= is not a member of Int
   	      	fin -=;
                    ^AlgCocktailSort2:17: error: value += is not a member of Int
   	      	deb +=;
                    ^